--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+cc = "1.0.3"
+
 [dependencies]
 clap = {version = "4.0.11", features = ["derive"] }
 toml = "0.5.9"
